mountall (0.1.9) UNRELEASED; urgency=low

  [ Scott James Remnant ]
  * Flush standard output and error before spawning processes to make
    capturing logs easier (otherwise we end up repeating things still in
    the buffer).

  [ Colin Watson ]
  * Always check the root filesystem if --force-fsck is used, regardless of
    passno.  LP: #435707.

 -- Scott James Remnant <scott@ubuntu.com>  Sun, 27 Sep 2009 14:50:48 -0700

mountall (0.1.8) karmic; urgency=low

  [ Scott James Remnant ]
  * Further work on the fix from the previous version where the root
    filesystem would always be considered "local", retain that from the
    POV of the {virtual,local,remote}-filesystems events, but do mount
    the root straight away when it's virtual since there's no device to
    wait until it's ready.  LP: #431204.
  * If a remote filesystem is already mounted and doesn't need a remount,
    don't wait for a network device to come up.  LP: #430348.

  * Ignore single and double quotes in fstab device specifications, since
    mount -a used to.  LP: #431064.
  * Never write mtab when mounting a mount with showthroughs (ie. /var)
    and instead update mtab once we've moved it into place
    later.  LP: #434172.

  [ Kees Cook ]
  * src/mountall.c: rework nftw hooks to use a global for argument passing
    instead of using nested functions and the resulting trampolines that
    cause an executable stack.  LP: #434813.
  * debian/rules: revert powerpc exception, since the cause is fixed by
    removing the nested functions.

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 23 Sep 2009 14:19:01 -0700

mountall (0.1.7) karmic; urgency=low

  * Build with -O2 on powerpc to work around wrong-code generation with -Os.
    LP: #432222.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 22 Sep 2009 00:31:52 +0200

mountall (0.1.6) karmic; urgency=low

  [ Scott James Remnant ]
  * Restored mistakenly removed dh_installchangelogs & dh_installdocs.
